# HydraDragonAV-Mobile

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  COPYRIGHT.md  README.md  build.gradle  build_qfilters.sh  build_url_blooms.py  build_whitelist_bloom.py  build_xfilters.sh  bump_version.py  clam_juice.py  filter_malicious_links.py  gen_domain_bloom.py  gen_ip_lists.py  gen_tlsh_db.py  gen_whitelist_apk.py  gen_whitelist_bloom.py  gen_whitelist_packages.py  gradle.properties  local.properties  nsrl_sql.py  settings.gradle
allblooms/: AbuseDomains.optimized.csv  AbuseSubDomains.optimized.csv  BenignMailDomains.optimized.csv  BenignMailSubDomains.optimized.csv  MaliciousMailDomains.optimized.csv  MaliciousMailSubDomains.optimized.csv  MiningDomains.optimized.csv  MiningSubDomains.optimized.csv  SpamDomains.optimized.csv  SpamSubDomains.optimized.csv  WhiteListSubDomains.optimized.csv  references.txt  references_malware_domains.txt
allips/: CIDRBlackListIPv4.optimized.csv  CIDRBlackListIPv6.optimized.csv  IPv4BruteForce.optimized.csv  IPv4DDoS.optimized.csv  IPv4PhishingActive.optimized.csv
app/: app_build.gradle  build.gradle  proguard-rules.pro
app/src/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CIDRBlackListIPv4.txt  CIDRBlackListIPv6.txt  abuse.bloom  abuse_domains.txt  malicious.bloom  malicious_mail.bloom  malicious_mail_domains.txt  malware.bloom  malwareurl.bloom  malwareurl_domains.txt  mining.bloom  mining_domains.txt  phishing.bloom  phishing_urls.bloom  phishingurl.bloom  spam.bloom  spam_domains.txt  whitelist2.bloom  whitelist5.bloom  whitelist_packages.txt
app/src/main/assets/scan/: AndroidOS_filtered.yrc  abuse.qf  abuse.xf  androguard.yrc  apk_model.json  clean_rules_filtered_verified.yrc  daily.ldb  daily.ldu  daily.ndb  ipbruteforce.xf  ipddos.xf  ipphishing.xf  ipspam.xf  machine_learning_apk.yrc  main.ldb  malicious_mail.qf  malicious_mail.xf  malwareurl.qf  malwareurl.xf  mining.qf  mining.xf  phishing.qf  phishingurl.qf  porcupine.ndb  public_suffixes.txt  rfxn.ndb  sanesecurity.ftm  shell.ldb  shelter.ldb  spam.qf  spam.xf  valhalla-rules_filtered_verified.yrc
app/src/main/java/com/hydradragon/antivirus/: BootReceiver.java  MainActivity.java
app/src/main/java/com/hydradragon/antivirus/adapter/: NetworkEventAdapter.java  ThreatAdapter.java
app/src/main/java/com/hydradragon/antivirus/engine/: AIEngine.java  BehaviorFlags.java  CidrBlacklist.java  CleanupEngine.java  CodeAnalyzer.java  MitmDetector.java  NativeScanner.java  NetworkMonitor.java  NetworkObservations.java  NetworkSecurityScanner.java  ProcessDetector.java  ProtectionState.java  RootCheck.java  ScanEngine.java  ScreenThreatKeywords.java  SelfProtection.java  TrustedPackages.java  (+3 more)
app/src/main/res/anim/: slide_in_left.xml
app/src/main/res/drawable/: bg_card.xml  bg_card_dark.xml  bg_threat_row.xml  ic_nav_dashboard.xml  ic_nav_settings.xml
app/src/main/res/layout/: activity_main.xml  fragment_scan.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-day/: colors.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  device_admin.xml  network_security_config.xml
av_test/: clean.txt
database/: bofhland_phishing_URL.ndb  daily.ign2  daily.ldb  main.ldb  main.ndb  twinwave.ign2
database_filtered/: bofhland_phishing_URL.ndb  daily.cdb  daily.ign2  daily.info  daily.ldb  daily.ldu  daily.ndb  daily.ndu  interservertopline.db  javascript.ndb  main.ldb  main.ndb  phish.ndb  porcupine.ndb  securiteinfo.ign2  sigwhitelist.ign2  twinwave.ign2
dev-tools/: convert_cuckoo_to_hydradragon.py
dev-tools/bloom_writer/: BloomVerify.java  BloomWriter.java  build_run.bat  pom.xml
dev-tools/hydradragon_yara_x_compile/: Cargo.toml
dev-tools/hydradragon_yara_x_compile/src/: main.rs
dev-tools/qfilter_writer/: Cargo.toml
dev-tools/qfilter_writer/src/: main.rs
dev-tools/xorfilter_writer/: Cargo.toml
dev-tools/xorfilter_writer/src/: main.rs
dev-tools/yarGen/: .gitignore  LICENSE  prepare-release.sh  requirements.txt  truncateruledesc64kb.py  yarGen.py  yarGenCommands.txt
dev-tools/yarGen/tools/: byte-mapper.py
hydradragonandroid/: Cargo.toml  README.md  build-android.sh
hydradragonandroid/examples/: repro.rs
hydradragonandroid/src/: dex_scan.rs  ip_scan.rs  lib.rs  url_scan.rs
hydradragonclamav/: Cargo.toml  README.md
hydradragonclamav/src/: bytecode.rs  database.rs  lib.rs  logical.rs  main.rs  pattern.rs  prefilter.rs  scanner.rs  yara_scan.rs
hydradragonextractor/: Cargo.toml
hydradragonextractor/src/: lib.rs  rar.rs
hydradragonml/: .gitignore  Cargo.toml  README.md
hydradragonml/src/: features.rs  iforest.rs  lib.rs  minhash.rs
hydradragonxorfilter/: Cargo.toml
hydradragonxorfilter/src/: lib.rs
yara-x/: AndroidOS.yar  AndroidOS_filtered.yar  YARA_Util.py  androguard.yar  androidos_filter.py  clean_rules_filtered_unverified.yar  clean_rules_filtered_verified.yar  machine_learning_apk.yar  unite_rules.py  valhalla-rules_filtered.yar  valhalla-rules_filtered_unverified.yar  valhalla-rules_filtered_verified.yar  yara_filter.py
yara-x/compiled/: valhalla-rules_filtered.yrc
(+21 files in other folders)
