[package]
name = "hydradragonandroid"
version = "0.1.0"
edition = "2024"
description = "JNI bridge: scans APKs on-device with HydraDragon YARA rulesets (clamav engine) + the one-class ML model."
license = "GPL-2.0-or-later"

[lib]
# cdylib -> libhydradragonandroid.so loaded by the Android app via JNI.
crate-type = ["cdylib", "rlib"]

[dependencies]
hydradragonclamav = { path = "../hydradragonclamav" }
hydradragonml = { path = "../hydradragonml" }
hydradragonextractor = { path = "../hydradragonextractor" }
sha2 = "0.11"
jni = "0.21"
# Pure-Rust TLSH fuzzy hashing for malware-similarity detection against the
# MalwareBazaar (apk/elf/so/dex) TLSH database.
tlsh-rs = "0.1.0"
# Binary-Fuse (xor) filters for the hash whitelist and the URL/domain blocklists.
# Smaller and faster to query than the previous quotient filter; the shared crate
# holds the key derivation + on-disk format so the `.xf` built offline by
# xorfilter_writer is queryable byte-for-byte on the arm64 device.
hydradragonxorfilter = { path = "../hydradragonxorfilter" }

[profile.release]
opt-level = "z"
lto = true
strip = true

# Fast-iteration profile for the host `repro` example: no LTO, parallel codegen,
# opt-level 2 (near-release runtime speed). The Android .so still uses the LTO'd
# release profile above.
[profile.repro]
inherits = "release"
lto = false
opt-level = 2
codegen-units = 16
strip = false
