[package]
name = "qfilter_writer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qfilter_writer"
path = "src/main.rs"

[dependencies]
# Same quotient filter the device loads. Default StableBuildHasher => the .qf
# built here is queryable byte-for-byte on the arm64 device.
qfilter = { version = "0.3", features = ["serde"] }
# postcard so the device can deserialize the buffer ZERO-COPY (FilterRef) from an
# mmap; use-std gives us to_allocvec here on the host.
postcard = { version = "1", features = ["use-std"] }

[profile.release]
opt-level = 3
